Fix hero image on small screens

--- a/app/assets/stylesheets/layouts/_header.css.sass
+++ b/app/assets/stylesheets/layouts/_header.css.sass
@@ -5,7 +5,10 @@
   width: 99vw
   height: 100vh
   background-size: auto, cover
+  background-position: center
+  background-repeat: no-repeat
   &.default-header
+    background-position: initial
     height: 400px
     > .hero-content
       padding-top: 203px
